# testing

BCN - Build Engineer test/BCN - Build Engineer test/__MACOSX/: ._build-engineer-test
BCN - Build Engineer test/BCN - Build Engineer test/__MACOSX/build-engineer-test/CoolGame/dependencies/googletest/xcode/Samples/FrameworkSample/: ._widget_test.cc
BCN - Build Engineer test/BCN - Build Engineer test/__MACOSX/build-engineer-test/CoolGame/game/include/: ._Game.h  ._GameObject.h
BCN - Build Engineer test/BCN - Build Engineer test/__MACOSX/build-engineer-test/CoolGame/game/src/: ._main.cpp
BCN - Build Engineer test/BCN - Build Engineer test/__MACOSX/build-engineer-test/CoolGame/game/src/test/: ._test_GameObject.cpp
BCN - Build Engineer test/BCN - Build Engineer test/build-engineer-test/CoolGame/: CMakeLists.txt  CMakeLists_tests.txt  run.bat
BCN - Build Engineer test/BCN - Build Engineer test/build-engineer-test/CoolGame/game/src/test/: GameObjectTest.cpp
